# leptos-surreal

./: Cargo.toml  index.html
src/: main.rs
