[package]
name = "leptos-surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb" } 
leptos = { version = "0.4.5", features = [ "serde", "csr" ]}